<resources>
    <string name="app_name">英游记</string>
    <string name="username_input">请输入用户名</string>
    <string name="password_input">请输入密码</string>
    <string name="login">登录</string>
    <string name="regist"><u>没有账号？立即注册</u></string>
    <string name="password_refind">找回密码</string>
    <string name="nihao_login">你好，</string>
    <string name="welcome_login">欢迎来到英游记！</string>
    <string name="relaxation">休闲</string>
    <string name="homepage">首页</string>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daojishitishi">距离考试还剩：</string>
    <string name="daojishi">0天0时0分0秒</string>
    <string name="time_setting">设置倒计时</string>
    <string name="time_input">请输入日期</string>
    <string name="setting">设置</string>
    <string name="todo">TODO</string>
    <string name="count_down">倒计时设置</string>
    <string name="design_statement">Designed by 曹鑫 陈杰 王泽</string>
    <string name="goal_input">请输入目标</string>
    <string name="date_choose">请选择日期</string>
    <string name="games">休闲益智游戏</string>
    <string name="game_2048">游戏2048</string>
    <string name="rule">规则</string>


    <string name="str_choose">选择模式</string>
    <string name="str_choose1">选择模式（中-英）</string>
    <string name="str_choose2">选择模式（英-中）</string>
    <string name="str_fill">填空模式</string>
    <string name="str_fill1">填空模式（英-中）</string>
    <string name="str_fill2">填空模式（中-英）</string>
    <string name="str_addwords">添加单词</string>
    <string name="str_dictionary">词库</string>
    <string name="str_translate_enzh">中英互译</string>
    <string name="str_game">2048游戏</string>
    <string name="str_translate_more">多语言翻译</string>
    <string name="str_help">软件使用说明</string>

    <!--功能-->
    <string name="str_delete">清空词库</string>
    <string name="str_english">单词</string>
    <string name="str_chinese">翻译</string>
    <string name="str_translation_result">翻译结果</string>
    <string name="str_del">删除</string>
    <string name="str_modify">修改</string>
    <string name="str_cancel">取消</string>
    <string name="str_search">查找</string>
    <string name="str_grasp">完全掌握这个单词了</string>
    <string name="str_next">下一个</string>
    <string name="str_exit">确定退出</string>
    <string name="str_exitapp">确定退出软件？</string>
    <string name="str_yes">确定</string>
    <string name="str_no">取消</string>
    <string name="str_zhoren">中文/英文</string>
    <string name="str_please_input">请输入需要翻译的文本</string>
    <string name="str_i">个人中心</string>
    <string name="str_recite_words">背单词</string>

    <!--单词本-->
    <string name="str_uni4">大学四级\n5197词</string>
    <string name="str_uni6">大学六级\n2581词</string>
    <string name="str_mshcool">考研高频\n词汇2729词</string>
    <string name="str_hshcool">高考词汇\n2327词</string>

    <!--软件使用说明-->
    <string name="str_aboutme">本软件由曹鑫、陈杰、王泽独立开发,仅供学习交流！</string>
    <string name="str_descrip_choose">
        注意：由于模式特性，你的词库内单词数超过五个才能进入。\n\n
        进入选择模式后，页面将会随机给出一个单词（或中文），四个选项中有一个选项为正确选项，其余三个为词库中随机获取的非正确选项。\n\n
        选择任意选项后，除正确答案外，其余选项都将提示出对应的翻译；并且选择正确时所选选项将变为绿色；选择错误时所选选项将变为红色，并且正确答案将会用绿色标出。\n
        选择完成后，选项右下方会出现一个“下一个”按钮，点击按钮即可刷新当前单词。\n\n
        点击屏幕下方“完全掌握这个单词了”，可以对本单词进行“掌握（删除）”，词库中将删除此单词。
    </string>
    <string name="str_descrip_fill">
        进入填空模式后，页面将随机给出一个单词（或中文），只有在输出框中输入正确答案，并点击输入框右下方的“确定”按钮，才会进行答案的判断。\n\n
        当填写答案正确时：填写的内容将变为绿色；\n\n
        当填写答案错误时：填写的内容将变为绿色，并会提示出正确答案；\n\n
        答案判断完可以点击输入框右下方的“下一个”，刷新当前单词。\n\n
        点击输入框下侧“完全掌握这个单词了”，可以对本单词进行“掌握（删除）”，词库中将删除此单词。
    </string>
    <string name="str_descrip_dictionary">
        词库列表显示词库内所有单词\n
        搜索：在顶部搜索框中输入想要搜索的单词，点击“查找”按钮，即可找到所查找单词的位置\n\n
        清空：点击右上角“清空词库”按钮即可清空词库所有单词（不可恢复，谨慎处理！）\n\n
        长按任意单词行弹出对话框，通过对话框可所选单词进行删除或更改
    </string>
    <string name="str_descrip_game">
        游戏简介：2048是一款风靡全球休闲益智类游戏，是一款简单易上手的数字小游戏\n\n
        游戏规则：每次可以选择上下左右其中一个方向去滑动，
        每滑动一次，所有的数字方块都会往滑动的方向靠拢外，
        系统也会在空白的地方乱数出现一个数字方块，
        相同数字的方块在靠拢、相撞时会相加。系统给予的数字方块不是2就是4，
        玩家要想办法在这小小的16格范围中凑出“2048”这个数字方块。
    </string>

    <string name="str_modify_aims">修改每日目标</string>
    <string name="str_right"><![CDATA[>]]></string>
    <string name="str_from_labguage">原文的语言类型：</string>
    <string name="str_to_language">译文的语言类型：</string>
    <string name="str_tip_copy">Tip:点击翻译结果框可复制翻译结果至手机剪切板！</string>
    <string name="str_save">保存修改</string>
    <string name="str_max_length_13">昵称最长为13个字符</string>
    <string name="str_max_length_40">签名最长为40个字符</string>
    <string name="str_today_goal">今日目标</string>
    <string name="str_today_ok">今日已完成</string>
    <string name="other_stting">其他设置</string>
    <string name="zhuce">注册</string>
    <string name="username">用&#160;&#160;户&#160;&#160;名：</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="password_input_again">请输入确认密码</string>
    <string name="password_confirm">确认密码：</string>
    <string name="username_regist">请输入6–10位的用户名</string>
    <string name="password_regist">请输入8–16位的密码</string>
    <string name="play">开始游玩</string>


    <!--词性 ：名词、介词、形容词、副词、数词、动词、及物动词、不及物动词、代词、连词、感叹词、冠词 -->
    <string-array name="word_part">
        <item>词性</item>
        <item>n.</item>
        <item>prep.</item>
        <item>adj.</item>
        <item>adv.</item>
        <item>num.</item>
        <item>v.</item>
        <item>vt.</item>
        <item>vi.</item>
        <item>pron.</item>
        <item>conj.</item>
        <item>int.</item>
        <item>art.</item>
    </string-array>
</resources>