<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">



    <TextView
        android:id="@+id/tv_login_nihao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="45dp"
        android:text="@string/nihao_login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginStart="35dp" />

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="@color/red"
        android:shadowColor="@color/purple_200"
        android:shadowRadius="3.0"
        android:shadowDx="10.0"
        android:shadowDy="10.0"
        android:text="@string/welcome_login"
        android:textSize="30sp"
        android:layout_marginStart="35dp" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="35dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:hint="@string/username_input"
        android:inputType="textVisiblePassword"
        android:maxLength="10"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24" />
    <EditText
        android:id="@+id/et_psw"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_baseline_lock_24" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:text="@string/login"
        android:gravity="center"
        android:background="@drawable/btn_shape"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="35dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="8dp"
            android:text="@string/regist"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="35dp"
        android:gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/design_statement"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold|italic"/>

    </LinearLayout>
</LinearLayout>