<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_resgit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:titleMargin="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:text="@string/zhuce"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:text="@string/username"
                android:layout_marginStart="10dp" />
            <EditText
                android:id="@+id/et_user_regist"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="35dp"
                android:gravity="center_vertical"
                android:hint="@string/username_regist"
                android:inputType="text"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="35dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/password"
                android:layout_marginStart="10dp" />
            <EditText
                android:id="@+id/et_psw_regist"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="35dp"
                android:gravity="center_vertical"
                android:hint="@string/password_regist"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="35dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/password_confirm"
                android:layout_marginStart="10dp" />
            <EditText
                android:id="@+id/et_psw_again"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="35dp"
                android:gravity="center_vertical"
                android:hint="@string/password_input_again"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="35dp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_regist"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/btn_shape"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            android:text="@string/zhuce"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>