<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txv_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txv_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorRed"
        android:textSize="26sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/radiuborder"
        android:gravity="center"
        android:hint="@string/str_chinese"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20sp"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:id="@+id/txv_grasp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:shadowColor="@color/colorShadowBlack"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:text="@string/str_grasp"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:text="@string/str_next"
            android:textSize="12sp"
            android:background="@drawable/btn_shape"
            tools:ignore="RtlHardcoded"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</LinearLayout>