<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.MyFragment">

    <LinearLayout
        android:id="@+id/ll_person"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/btn_blue"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"
            tools:ignore="ContentDescription,NestedWeights" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/radiuborder">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_down"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/time_setting"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    android:hint="@string/date_choose"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_black"
                    android:textSize="14sp"
                    android:inputType="none"
                    android:layout_marginStart="10dp" />
                <Button
                    android:id="@+id/btn_timeset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_shape"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/goal_setting"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    android:hint="@string/goal_input"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_black"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:layout_marginStart="10dp" />
                <Button
                    android:id="@+id/btn_goalset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_shape"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/radiuborder">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_stting"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>